<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backcolor"
    tools:context=".RegisterActivity">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:contentDescription="@string/logo_des"
        android:tint="@color/accentcolor"
        app:layout_constraintBottom_toTopOf="@+id/formRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logovitaplant_noback" />

    <LinearLayout
        android:id="@+id/formRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo">

        <EditText
            android:id="@+id/editTextText"
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="16dp"
            android:background="@android:drawable/editbox_background_normal"
            android:backgroundTint="#1BFFFFFF"
            android:hint="@string/user_name"
            android:inputType="text"
            android:textColor="@color/accentcolor"
            android:textColorHint="@color/accentcolor" />

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@android:drawable/editbox_background_normal"
            android:backgroundTint="#1BFFFFFF"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/accentcolor"
            android:textColorHint="@color/accentcolor" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@android:drawable/editbox_background_normal"
            android:backgroundTint="#1BFFFFFF"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:textColor="@color/accentcolor"
            android:textColorHint="@color/accentcolor" />

        <EditText
            android:id="@+id/editTextTextPassword2"
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@android:drawable/editbox_background_normal"
            android:backgroundTint="#1BFFFFFF"
            android:hint="@string/prompt2_password"
            android:inputType="textPassword"
            android:textColor="@color/accentcolor"
            android:textColorHint="@color/accentcolor" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/accentcolor"
            android:fontFamily="@font/adlam_display"
            android:text="@string/register"
            android:textColor="@color/backcolor"
            android:textSize="16sp" />
    </LinearLayout>

    <!-- Campo de Correo Electrónico -->

    <!-- Campo de Contraseña -->

    <!-- Confirmar Contraseña -->

    <!-- Botón de Registrar -->

</androidx.constraintlayout.widget.ConstraintLayout>
